--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "eslint-plugin-react-native": "^3.5.0",
     "expo": "^30.0.1",
-    "react": "16.3.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-navigation": "^2.18.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
